# internal/infra/entrypoint/rest/group_dto.go
@@ -182,9 +182,9 @@ type GroupFiltersDTO struct {
 	// example: 01234567-89ab-cdef-0123-456789abcdef
 	UserID string `query:"user_id" json:"user_id"`
 
-	// Filter by group status
+	// Filter by group status (multiple values allowed)
 	// example: OPEN
-	Status string `query:"status" json:"status" validate:"omitempty,oneof=OPEN MATCHED ARCHIVED"`
+	Statuses []string `query:"status" json:"status" validate:"omitempty,dive,oneof=OPEN MATCHED ARCHIVED"`
 
 	// Maximum number of results to return
 	// example: 10
@@ -215,11 +215,16 @@ func mapGroupFiltersDTOToDomain(filtersDTO GroupFiltersDTO) (*domain.GroupFilter
 		return nil, err
 	}
 
+	var statuses []domain.GroupStatus
+	for _, s := range filtersDTO.Statuses {
+		statuses = append(statuses, domain.GroupStatus(s))
+	}
+
 	return domain.NewGroupFilters(
 		filtersDTO.Name,
 		filtersDTO.OwnerID,
 		filtersDTO.UserID,
-		domain.GroupStatus(filtersDTO.Status),
+		statuses,
 		filtersDTO.Limit,
 		filtersDTO.Offset,
 		domain.SortDirectionType(filtersDTO.SortDirection),
